fixed body margin and overflow after seeing heroku render

--- a/frontend/src/components/BrowserRoutes/BrowserRoutes.css
+++ b/frontend/src/components/BrowserRoutes/BrowserRoutes.css
@@ -59,7 +59,7 @@
     justify-content: space-between;
     padding: 10px;
     color: white;
-    margin-bottom: 146px;
+    margin-bottom: 156px;
 }
 
 .browser-div {
