--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,8 @@ body {
     color: white;
     text-decoration: none;
     font-family: -apple-system, "system-ui", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    margin-left: 0px;
+    margin: 0px;
+    overflow: hidden;
 }
 
 .modal-content {
